--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pratham Joshi - Social Media Links</title>
+<title>Pratham Joshi - Resume</title>
 <style>
   body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f7f7f7;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
   }
 
   .container {
-    text-align: center;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 80%;
-    max-width: 400px;
+    max-width: 800px;
+    margin: 0 auto;
   }
 
-  h1 {
+  h1, h2, h3 {
     margin-top: 0;
+  }
+
+  .section {
+    margin-bottom: 20px;
   }
 
   .social-links {
@@ -51,10 +51,62 @@
 <body>
 <div class="container">
   <h1>Pratham Joshi</h1>
-  <div class="social-links">
-    <a href="https://kaggle.com/prathamjoshi2002" target="_blank">Kaggle</a>
-    <a href="https://github.com/prathamjoshi0909" target="_blank">GitHub</a>
-    <a href="https://linkedin.com/in/prathamjoshi2002/" target="_blank">LinkedIn</a>
+  <div class="section">
+    <h2>Education</h2>
+    <p>Computer Science Engineering, B-tech<br>
+    PCET’s Nutan College Of Engineering And Research, Talegaon Dabhade, Pune<br>
+    (Currently in Fourth year)</p>
+    
+    <p>Science, Higher Secondary Certificate<br>
+    MIT Junior College Of Science & Commerce, Talegaon Dabhade, Pune, India</p>
+  </div>
+  
+  <div class="section">
+    <h2>Internship</h2>
+    <p>Al Adventures (Artificial Intelligence | Data Science)<br>
+    Machine Learning | Python Training<br>
+    (2023-01)<br>
+    Managed and created templates for mini projects for more than 120 students under their 1 month PBL course (Introduction to Python)</p>
+  </div>
+  
+  <div class="section">
+    <h2>Projects</h2>
+    <p>Iris Flower Clustering and 3D Visualization with K-Means:<br>
+    (Project description)</p>
+    <p>Zomato Data Analysis:<br>
+    (Project description)</p>
+    <!-- Add more project descriptions -->
+  </div>
+  
+  <div class="section">
+    <h2>Extracurricular Activities</h2>
+    <p>Student Council:<br>
+    (Activity description)</p>
+    <p>Coding Club:<br>
+    (Activity description)</p>
+    <!-- Add more activity descriptions -->
+  </div>
+  
+  <div class="section">
+    <h2>Certificates</h2>
+    <ul>
+      <li>Completion Certificate- Introduction to Java Programming</li>
+      <li>Arduino Based Automation PBL</li>
+      <li>Ethnus & AWS Cloud Master Class - Discovery Day</li>
+      <li>Data Science in Python</li>
+      <li>Intro to Machine Learning (Kaggle)</li>
+      <li>Intermediate Machine Learning (Kaggle)</li>
+      <li>Data Visualization Congratulations, you did it! Your certificate is ready (Kaggle)</li>
+    </ul>
+  </div>
+  
+  <div class="section">
+    <h2>Social Profiles</h2>
+    <div class="social-links">
+      <a href="https://kaggle.com/prathamjoshi2002" target="_blank">Kaggle</a>
+      <a href="https://github.com/prathamjoshi0909" target="_blank">GitHub</a>
+      <a href="https://linkedin.com/in/prathamjoshi2002/" target="_blank">LinkedIn</a>
+    </div>
   </div>
 </div>
 </body>
